--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.2.6",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@types/styled-components": "^5.1.22",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
